Fixed: Delete icon of Attachment is not displayed on mobile view (bug#13254).

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Default.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Default.css
@@ -486,7 +486,7 @@ table.AttachmentList .Filesize {
 }
 
 table.AttachmentList .Delete {
-    width: 10px;
+    width: 15px;
     text-align: center;
 }
 
